# BEHAVIOURAL-BIOMETRICS

./: .gitignore  CMakeLists.txt  DataReadingHandler.cpp  DataReadingHandler.h  Main.qml  Pattern.cpp  Pattern.h  ProgressXYBar.qml  ProgressZBar.qml  README.md  logger.cpp  logger.h  main.cpp
